--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h2>Faça seu orçamento gratuitamente!</h2>
                 <p>Ligando para nós você consegue fazer um orçamento bem detalhado e saberá mais sobre nossos serviços!</p>
                 <div class="botoes">
-                    <a class="chamada__botao" href="tel: +55 21 976618540"><i class="fa-solid fa-phone"></i> (21) 976618540</a>
+                    <a class="chamada__botao" href="tel:5521976618540"><i class="fa-solid fa-phone"></i> (21) 976618540</a>
                     <a class="chamada__botao sobre" href="https://business.google.com/v/_/AKsrIN3Va5Rul3pU7AJ7Gm25P0SXvAF7fIpOeXjqzgZ0Mzgf6HJD9g/86b9/_?exp=1778401&myads=1" target="_blank">Sobre nós</a>
                 </div>
             </div>
