--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
             <div class="conteudo__chamada___info">
                 <h1>Mudanças Mulinari</h1>
                 <h2>Há mais de 20 anos nesta área!</h2>
-                <p>Faça sua mudança residencial e transporte seus móveis com segurança!</p>
+                <p>Faça sua mudança residencial e transporte seus móveis com segurança e rapidez!</p>
                 <p>Pague com PIX ou com o cartão em até 10x sem juros!</p>
                 <h2>Faça seu orçamento gratuitamente!</h2>
                 <p>Ligando para nós você consegue fazer um orçamento bem detalhado e saberá mais sobre nossos serviços!</p>
                 <div class="botoes">
-                    <a class="chamada__botao" href="tel:5521976618540"><i class="fa-solid fa-phone"></i> (21) 976618540</a>
+                    <a class="chamada__botao" href="tel:5521976618540"><i class="fa-solid fa-phone"></i> (21) 99971-1042</a>
                     <a class="chamada__botao sobre" href="https://business.google.com/v/_/AKsrIN3Va5Rul3pU7AJ7Gm25P0SXvAF7fIpOeXjqzgZ0Mzgf6HJD9g/86b9/_?exp=1778401&myads=1" target="_blank">Sobre nós</a>
                 </div>
             </div>
@@ -35,7 +35,7 @@
             <h2>Nossos serviços</h2>
             <ul class="lista__servicos">
                 <li class="lista__servicos___item">
-                    <h2>Montagem e desmotagem de móveis</h2>
+                    <h2>Montagem e desmontagem de móveis</h2>
                     <p>Nós da Mudanças Mulinari fazemos toda a montagem e desmontagem dos móveis que precisar pra você!</p>
                 </li>
                 <li class="lista__servicos___item">
