--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+<!-- Global site tag (gtag.js) - Google Ads: 696441514 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-696441514"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-696441514');
+</script>
 <body>
     <div class="whatsapp"><a href="https://api.whatsapp.com/send?phone=5521999711042" target="_blank"><i class="fa-brands fa-whatsapp"></i></a></div>
     <main class="conteudo__principal">
